move about section

--- a/index.html
+++ b/index.html
@@ -257,10 +257,18 @@ layout: default
     <!-- Hero Section -->
     <div class="hero-section">
         <div class="title-container">
-            <h1>Design Retreat in Design for<br>Human-Robot Interaction</h1>
+            <h1>Design Retreat in Human-Robot Interaction</h1>
         </div>
     </div>
 
+        <!-- About Section -->
+        <div class="about-section">
+            <h2>About</h2>
+            <p>The Design Retreat brings together academics and industry professionals from all over the world who are
+                experts in the field of Design for Human-Robot Interaction (Design for HRI) to engage in 2 days of hands-on
+                interactive activities that will explore how to shape the future of Design for HRI of a 5-10 years roadmap.
+            </p>
+        </div>
     <!-- Solid Color Section -->
     <div class="solid-color">
         <div class="section-images">
@@ -290,14 +298,7 @@ layout: default
         </div>
     </div>
 
-    <!-- About Section -->
-    <div class="about-section">
-        <h2>About</h2>
-        <p>The Design Retreat brings together academics and industry professionals from all over the world who are
-            experts in the field of Design for Human-Robot Interaction (Design for HRI) to engage in 2 days of hands-on
-            interactive activities that will explore how to shape the future of Design for HRI of a 5-10 years roadmap.
-        </p>
-    </div>
+
 
     <!-- Organizers Section -->
     <div class="organizers-section">
