--- a/index.html
+++ b/index.html
@@ -60,12 +60,9 @@
             filter: blur(10px);
         }
 
-        .solid-color {
-            padding: 60px 20px;
-        }
 
         body {
-            background-color: #FFFAFA;
+            background-color: #FAF1E6;
         }
 
         .section-images {
@@ -271,6 +268,7 @@
         </div>
     <!-- Solid Color Section -->
     <div class="solid-color">
+       <div class="dates" style="background-color: #FDFAF6;">
         <div class="section-images">
             <!-- Dates Section -->
             <div class="left">
@@ -281,7 +279,7 @@
                 <p>14 and 15 April 2025</p>
             </div>
         </div>
-
+</div>
         <!-- Location and Image Section -->
         <div class="section-images">
             <!-- Location Section -->
@@ -299,6 +297,7 @@
     </div>
 
 
+    <div class="organizers" style="background-color: #FDFAF6;">
 
     <!-- Organizers Section -->
     <div class="organizers-section">
@@ -316,7 +315,7 @@
             </div>
         </div>
     </div>
-
+</div>
 
     <div class="participants-section">
         <h2>Participants</h2>
