add google analytics

--- a/index.html
+++ b/index.html
@@ -363,6 +363,13 @@ layout: default
             </div>
         </div>
 
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-3RN77H1CFE"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+  gtag('config', 'G-3RN77H1CFE');
+</script>
 </body>
 
 </html>
