fix google scholar

--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@ layout: default
                     <a href="https://www.linkedin.com/in/patricia-alves-oliveira" target="_blank" class="icon-link">
                         <i class="fab fa-linkedin" title="linkedin"></i>
                     </a>
-                    <a href="https://scholar.google.pt/citations?user=tbn31lmaaaaj&hl=en" target="_blank" class="icon-link">
+                    <a href="https://scholar.google.pt/citations?user=TbN31LMAAAAJ&hl=en" target="_blank" class="icon-link">
                         <i class="fa-brands fa-google-scholar"></i>
                     </a>
                     <a href="mailto:robopati@umich.edu" class="icon-link" target="_blank" >
@@ -375,7 +375,7 @@ layout: default
                     <a href="https://www.linkedin.com/in/anastasia-kouvaras-ostrowski/" target="_blank" class="icon-link">
                         <i class="fab fa-linkedin" title="linkedin"></i>
                     </a>
-                    <a href="https://scholar.google.com/citations?user=nnnytkaaaaaj&hl=en" target="_blank" class="icon-link">
+                    <a href="https://scholar.google.com/citations?user=nnNYtkAAAAAJ&hl=en" target="_blank" class="icon-link">
                         <i class="fab fa-google-scholar"></i>
                     </a>
                     <a href="mailto:akostrow@purdue.edu" class="icon-link" target="_blank" >
