--- a/index.html
+++ b/index.html
@@ -436,7 +436,15 @@ layout: default
                 check back after the retreat for open access materials.
             </div>
         </div>
-
+    </div>
+    <footer style="background-color: white; padding: 5px 0; text-align: center;">
+        <div style="display: flex; justify-content: center; align-items: center; gap: 2px;">
+            <img src="nsf.png" alt="NSF Logo" style="width: 24px; height: auto;">
+            <p style=" color: black; ">
+                the hri design retreat is part of the nsf eager award: “visioning design evolution for human-robot interaction”
+            </p>
+        </div>
+    </footer>
 <script async src="https://www.googletagmanager.com/gtag/js?id=g-3rn77h1cfe"></script>
 <script>
   window.datalayer = window.datalayer || [];
