--- a/index.html
+++ b/index.html
@@ -428,11 +428,11 @@ layout: default
   
     <div class="open-access" style="background-color:#F7F7F7;">
         <div class="future-section" style="text-align: center; padding: 40px 20px;">
-            <h2 style="margin-bottom:20px;">Future</h2>
+            <h2 style="margin-bottom:20px;">future</h2>
     
             <p>
-                We will be expanding the design-based concentration within the HRI and robotics communities.
-                <br>Check back on this website after the retreat for open access materials, additional future events, and publications!
+                we will be expanding the design-based concentration within the hri and robotics communities.
+                <br>check back on this website after the retreat for open access materials, additional future events, and publications!
             </p>
         </div>
     </div>
