--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@ layout: default
             }
         }
         .highlight {
-            background-color:#f3d9ff;
+            background-color:#E6E6FA;
             border-radius: 8px;
             padding: 2px 6px;
             color: black;
