--- a/index.html
+++ b/index.html
@@ -370,7 +370,7 @@ layout: default
                         <!-- icons next to name -->
                         
                     </h3>
-                    <p>purdue university, us</p>
+                    <p style="color:#555555">purdue university, us</p>
                     
                     <p style="margin-top:4px"><a href="https://www.akostrowski.com/" target="_blank" class="icon-link">
                         <i class="fas fa-globe" title="personal website"></i>
