fix google analytics

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@ layout: default
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta property="og:image" content="cover.jpg">
+
     <title>design retreat in human-robot interaction</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -474,13 +476,13 @@ layout: default
                 the design retreat was funded by the national science foundation (nsf) award #24-paf08983: "eager: rdsv: visioning design evolution for human-robot interaction"</p>
         </div>
     </footer>
-<script async src="https://www.googletagmanager.com/gtag/js?id=g-3rn77h1cfe"></script>
-<script>
-  window.datalayer = window.datalayer || [];
-  function gtag(){datalayer.push(arguments);}
-  gtag('js', new date());
-  gtag('config', 'g-3rn77h1cfe');
-</script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-3RN77H1CFE"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-3RN77H1CFE');
+    </script>
 
 <style>
 
