--- a/index.html
+++ b/index.html
@@ -547,11 +547,109 @@ layout: default
     </div>
     <!-- publications & events section -->
 <div class="publications-events-section" style="background-color:#F7F7F7; padding: 40px 20px; text-align: center;">
-    <h2 style="margin-bottom:20px;">publications, events, & materials</h2>
+    <h2 style="margin-bottom:20px;">publications & materials</h2>
     <p>   we will be expanding the design-based concentration within the hri and robotics communities.
-        <br>check back on this website after the retreat for open access materials, additional future events, and publications!
+        <br>check back on this website for open access materials and publications!
    </p>
 </div>
+
+
+<div class="events-section" style="background-color: #FFF;">
+    <h2>events</h2>
+</p> 
+    <!-- single event block -->
+    <div class="event">
+        <!-- left: image -->
+        <div class="event-image">
+            <img src="pic1.jpeg" alt="event image">
+        </div>
+
+        <!-- right: details -->
+        <div class="event-details">
+            <h3>the design retreat</h3>
+            <p><strong>location:</strong> <a href="https://www.newlab.com/about" target="_blank">newlab</a>, 2050 15th st, detroit, mi 48216</p>
+            <p><strong>dates:</strong> april 14–15, 2025</p>
+            <p>hosted in newlab, a creative and entrepreneurial brand-new space in detroit.</p>
+        </div>
+    </div>
+    <p style="margin-top:20px; text-align: center;">check back on this website additional future events!
+
+</div>
+
+<style>.events-section {
+background-color: #FFF;
+padding: 40px 20px;
+}
+
+.events-section h2 {
+text-align: center;
+margin-bottom: 20px;
+font-size: 2.5rem;
+}
+
+.event {
+display: flex;
+justify-content: space-evenly;
+align-items: stretch;
+}
+
+.event-image,
+.event-details {
+display: flex;
+flex-direction: column;
+width: 45%;
+}
+
+.event-image {
+align-items: center;
+}
+
+.event-image img {
+width: 100%;
+height: 150px;
+
+object-fit: cover;
+border-radius: 8px;
+}
+
+.event-details {
+align-items: flex-start;
+justify-content: center;
+text-align: left;
+}
+
+.event-details h3 {
+margin-bottom: 10px;
+}
+
+.event-details p {
+margin-bottom: 10px;
+}
+
+/* Mobile view adjustments */
+@media screen and (max-width: 768px) {
+.event {
+    flex-direction: column;
+    align-items: center;  /* Center-align items when stacked */
+    gap: 20px;  /* Reduce gap between image and text */
+}
+
+.event-image,
+.event-details {
+    width: 100%;  /* Full width on mobile */
+}
+
+.event-details {
+    text-align: left; /* Keep text left-aligned */
+}
+
+.event-image img {
+    height: auto;  /* Adjust image height to be proportional on mobile */
+}
+}
+
+
+</style>
 
 <!-- materials section -->
  <!--
@@ -580,7 +678,7 @@ access to our materials is available on our <a href="https://github.com/studioro
 -->
   
   
-    <footer style=" padding: 40px 20px; text-align: center; background-color:#FFF;">
+    <footer style=" padding: 40px 20px; text-align: center; background-color:#F7F7F7;">
         
         <h2 style="margin-bottom:20px;">funding</h2>
         <div style="display: flex; justify-content: center; align-items: center; gap: 5px;">
