--- a/index.html
+++ b/index.html
@@ -552,7 +552,7 @@ layout: default
             <p>hosted in newlab, a creative and entrepreneurial brand-new space in detroit.</p>
         </div>
     </div>
-    <p style="margin-top:20px; text-align: center;">check back on this website additional future events!
+    <p style="margin-top:20px; text-align: center;">check back on this website for additional future events!
 
 </div>
 
