--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@ layout: default
         .about-section {
 
             padding: 20px 20px;
-            padding-bottom:30px;
+            padding-bottom: 30px;
             display: flex;
             flex-direction: column;
             align-items: center;
@@ -150,7 +150,7 @@ layout: default
         .organizers-section {
             text-align: center;
             padding: 20px 20px;
-            padding-bottom:30px;
+            padding-bottom: 30px;
             /* background-color: #e6ffe6; /* light green background */
         }
 
@@ -188,7 +188,7 @@ layout: default
 
         .participants-section {
             padding: 20px 20px;
-            padding-bottom:30px;
+            padding-bottom: 30px;
             display: flex;
             flex-direction: column;
             align-items: center;
@@ -360,7 +360,7 @@ layout: default
     </style>
 
 
- <!--
+    <!--
     <style>
         .video-wrapper {
           position: relative;
@@ -424,7 +424,7 @@ layout: default
     </script>
 -->
 
-    
+
 
 
     <div class="documentary-section" style="background-color:#F7F7F7; padding: 0; text-align: center;">
@@ -564,30 +564,30 @@ layout: default
     <div class="research-team-section" style="background-color:#F7F7F7;">
         <h2>research team</h2>
         <div class=" research-team">
-        {% assign researchers = site.data.researchers %}
-        {% for researcher in researchers %}
-        <div class="researcher">
-            <img src="participants/{{ researcher.image }}" alt="{{ researcher.name }}">
-            <h3 class="professor-name">{{ researcher.name }} {% if researcher.web %}
-                <a href="{{ researcher.web }}" class="icon-link" target="_blank">
-                    <i class="fas fa-globe" title="Website"></i>
-                </a>
-                {% endif %}
-                {% if researcher.in %}
-                <a href="{{ researcher.in }}" class="icon-link" target="_blank">
-                    <i class="fab fa-linkedin" title="LinkedIn"></i>
-                </a>
-            </h3>
+            {% assign researchers = site.data.researchers %}
+            {% for researcher in researchers %}
+            <div class="researcher">
+                <img src="participants/{{ researcher.image }}" alt="{{ researcher.name }}">
+                <h3 class="professor-name">{{ researcher.name }} {% if researcher.web %}
+                    <a href="{{ researcher.web }}" class="icon-link" target="_blank">
+                        <i class="fas fa-globe" title="Website"></i>
+                    </a>
+                    {% endif %}
+                    {% if researcher.in %}
+                    <a href="{{ researcher.in }}" class="icon-link" target="_blank">
+                        <i class="fab fa-linkedin" title="LinkedIn"></i>
+                    </a>
+                </h3>
 
-            <p>{{ researcher.inst }}</p>
-            <p style="margin-top:4px;">
+                <p>{{ researcher.inst }}</p>
+                <p style="margin-top:4px;">
 
 
-                {% endif %}
-            </p>
+                    {% endif %}
+                </p>
+            </div>
+            {% endfor %}
         </div>
-        {% endfor %}
-    </div>
     </div>
 
 
@@ -625,7 +625,8 @@ layout: default
         </div>
     </div>
 
-    <div class="materials-section" style="background-color:#F7F7F7; padding: 20px 20px; padding-bottom:30px; text-align: center;">
+    <div class="materials-section"
+        style="background-color:#F7F7F7; padding: 20px 20px; padding-bottom:30px; text-align: center;">
         <h2>materials</h2>
         <div class="materials-container"
             style="display: flex; justify-content: space-evenly; flex-wrap: wrap; gap: 20px; margin-top: 20px;">
@@ -668,12 +669,14 @@ layout: default
 
         </div>
 
-       <p style="padding-top:20px;">
-        you can access our materials on
-        <a href="https://github.com/studiorobot/hri-design-retreat" target="_blank"
-            style="color: #af75e8; text-decoration: none;">github</a>.</p>  
+        <p style="padding-top:20px;">
+            you can access our materials on
+            <a href="https://github.com/studiorobot/hri-design-retreat" target="_blank"
+                style="color: #af75e8; text-decoration: none;">github</a>.
+        </p>
     </div>
-    <div class="publications-section" style="background-color:#FFF; padding: 20px 20px; padding-bottom: 30px; text-align: left;">
+    <div class="publications-section"
+        style="background-color:#FFF; padding: 20px 20px; padding-bottom: 30px; text-align: left;">
         <h2 style="text-align: center; margin-bottom: 20px;">publications</h2>
         <!--
         <div class="publications-container" style="display: flex; gap: 40px; align-items: flex-start;">
@@ -713,7 +716,7 @@ layout: default
             </div>
         </div>
         -->
-                <p style=" text-align: center;">check back later for publications.</p>
+        <p style=" text-align: center;">check back later for publications.</p>
 
     </div>
     <style>
@@ -787,6 +790,7 @@ layout: default
     </div>
 
 
+
     <style>
         @media screen and (max-width: 768px) {
             .publication {
@@ -809,7 +813,7 @@ layout: default
         .events-section {
             background-color: #FFF;
             padding: 20px 20px;
-            padding-bottom:30px;
+            padding-bottom: 30px;
         }
 
         .events-section h2 {
@@ -885,9 +889,182 @@ layout: default
         }
     </style>
 
+    <!-- Moments Section -->
+    <div class="moments-section" style="background-color:#F7F7F7; padding: 20px 20px; padding-bottom:30px;">
+        <h2 style="text-align: center; margin-bottom: 20px;">moments</h2>
 
+        <div class="moments-grid">
+            <div class="moment-item1"></div>
+            <div class="moment-item2"></div>
+            <div class="moment-item3"></div>
+            <div class="moment-item4"></div>
+            <div class="moment-item5"></div>
+            <div class="moment-item6"></div>
+            <div class="moment-item7"></div>
+            <div class="moment-item8"></div>
+            <div class="moment-item9"></div>
+        </div>
+    </div>
 
-    <footer style=" padding: 20px 20px; padding-bottom:30px; text-align: center; background-color:#F7F7F7;">
+    <style>
+        .moments-grid {
+            display: grid;
+            grid-template-columns: repeat(7, 1fr);
+            grid-template-rows: repeat(5, 1fr);
+            width: 100%;
+            height: 70vh;
+            grid-gap: 10px;
+            margin: 0 auto;
+        }
+
+        .moment-item1 {
+            background-image: url("images/moments/moments1.jpeg");
+            background-size: cover;
+            background-position: center;
+            grid-column: 1/4;
+            grid-row: 1/2;
+            border-radius: 8px;
+        }
+
+        .moment-item2 {
+            background-image: url("images/moments/moments2.jpeg");
+            background-size: cover;
+            background-position: center;
+            grid-column: 1/2;
+            grid-row: 2/5;
+            border-radius: 8px;
+        }
+
+        .moment-item3 {
+            background-image: url("images/moments/moments4.jpeg");
+            background-size: cover;
+            background-position: center;
+            grid-column: 1/5;
+            grid-row: 5/6;
+            border-radius: 8px;
+        }
+
+        .moment-item4 {
+                        background-image: url("images/moments/moments3.jpg");
+
+            background-size: cover;
+            background-position: center;
+            grid-column: 2/4;
+            grid-row: 2/5;
+            border-radius: 8px;
+        }
+
+        .moment-item5 {
+            background-image: url("images/moments/moments5.jpeg");
+            background-size: cover;
+            background-position: center;
+            grid-column: 4/6;
+            grid-row: 1/3;
+            border-radius: 8px;
+        }
+
+        .moment-item6 {
+            background-image: url("images/moments/moments8.jpg");
+            background-size: cover;
+            background-position: center;
+            grid-column: 4/5;
+            grid-row: 3/5;
+            border-radius: 8px;
+        }
+
+        .moment-item7 {
+            background-image: url("images/moments/moments9.jpg");
+
+            background-size: cover;
+            background-position: center;
+            grid-column: 5/6;
+            grid-row: 3/6;
+            border-radius: 8px;
+        }
+
+        .moment-item8 {
+            background-image: url("images/moments/moments6.jpeg");
+
+            background-size: cover;
+            background-position: center;
+            grid-column: 6/8;
+            grid-row: 1/4;
+            border-radius: 8px;
+        }
+
+        .moment-item9 {
+            background-image: url("images/moments/moments7.jpg");
+
+            background-size: cover;
+            background-position: center;
+            grid-column: 6/8;
+            grid-row: 4/6;
+            border-radius: 8px;
+        }
+
+        /* Mobile responsiveness for moments grid */
+        @media (max-width: 768px) {
+            .moments-grid {
+                height: 50vh;
+                grid-gap: 5px;
+            }
+        }
+
+        @media (max-width: 480px) {
+            .moments-grid {
+                grid-template-columns: repeat(3, 1fr);
+                grid-template-rows: repeat(3, 1fr);
+                height: 40vh;
+            }
+
+            .moment-item1 {
+                grid-column: 1/2;
+                grid-row: 1/2;
+            }
+
+            .moment-item2 {
+                grid-column: 2/3;
+                grid-row: 1/2;
+            }
+
+            .moment-item3 {
+                grid-column: 3/4;
+                grid-row: 1/2;
+            }
+
+            .moment-item4 {
+                grid-column: 1/2;
+                grid-row: 2/3;
+            }
+
+            .moment-item5 {
+                grid-column: 2/3;
+                grid-row: 2/3;
+            }
+
+            .moment-item6 {
+                grid-column: 3/4;
+                grid-row: 2/3;
+            }
+
+            .moment-item7 {
+                grid-column: 1/2;
+                grid-row: 3/4;
+            }
+
+            .moment-item8 {
+                grid-column: 2/3;
+                grid-row: 3/4;
+            }
+
+            .moment-item9 {
+                grid-column: 3/4;
+                grid-row: 3/4;
+            }
+        }
+    </style>
+
+    <footer style=" padding: 20px 20px; padding-bottom:30px; text-align: center; background-color:#FFF;">
 
         <h2 style="margin-bottom:20px;">funding</h2>
         <div style="display: flex; justify-content: center; align-items: center; gap: 5px;">
@@ -988,7 +1165,7 @@ layout: default
 
         .research-team-section {
             padding: 20px 20px;
-            padding-bottom:30px;
+            padding-bottom: 30px;
 
         }
 
