update moments position

--- a/index.html
+++ b/index.html
@@ -675,8 +675,25 @@ layout: default
                 style="color: #af75e8; text-decoration: none;">github</a>.
         </p>
     </div>
+
+        <!-- Moments Section -->
+    <div class="moments-section" style="background-color:#FFF; padding: 20px 20px; padding-bottom:30px;">
+        <h2 style="text-align: center; margin-bottom: 20px;">moments</h2>
+
+        <div class="moments-grid">
+            <div class="moment-item1"></div>
+            <div class="moment-item2"></div>
+            <div class="moment-item3"></div>
+            <div class="moment-item4"></div>
+            <div class="moment-item5"></div>
+            <div class="moment-item6"></div>
+            <div class="moment-item7"></div>
+            <div class="moment-item8"></div>
+            <div class="moment-item9"></div>
+        </div>
+    </div>
     <div class="publications-section"
-        style="background-color:#FFF; padding: 20px 20px; padding-bottom: 30px; text-align: left;">
+        style="background-color:#F7F7F7; padding: 20px 20px; padding-bottom: 30px; text-align: left;">
         <h2 style="text-align: center; margin-bottom: 20px;">publications</h2>
         <!--
         <div class="publications-container" style="display: flex; gap: 40px; align-items: flex-start;">
@@ -757,7 +774,19 @@ layout: default
     </style>
 
 
-    <div class="events-section" style="background-color: #F7F7F7;">
+  
+
+    <div class="events-section" style="background-color: #FFF;">
+        <h2>future events</h2>
+
+
+        <p style=" text-align: center;">to view upcoming events or add your own, please visit our <a
+                href="https://docs.google.com/document/d/1AVU-4um7yty-cTXWf6sM3XWuYieAwaK9NJhDBk8YqgM/edit?usp=sharing"
+                target="_blank">google doc</a>.</p>
+
+    </div>
+
+  <div class="events-section" style="background-color: #F7F7F7;">
         <h2>hri design retreat</h2>
         </p>
         <!-- single event block -->
@@ -777,18 +806,6 @@ layout: default
         </div>
 
     </div>
-
-
-    <div class="events-section" style="background-color: #FFF;">
-        <h2>future events</h2>
-
-
-        <p style=" text-align: center;">to view upcoming events or add your own, please visit our <a
-                href="https://docs.google.com/document/d/1AVU-4um7yty-cTXWf6sM3XWuYieAwaK9NJhDBk8YqgM/edit?usp=sharing"
-                target="_blank">google doc</a>.</p>
-
-    </div>
-
 
 
     <style>
@@ -889,22 +906,7 @@ layout: default
         }
     </style>
 
-    <!-- Moments Section -->
-    <div class="moments-section" style="background-color:#F7F7F7; padding: 20px 20px; padding-bottom:30px;">
-        <h2 style="text-align: center; margin-bottom: 20px;">moments</h2>
 
-        <div class="moments-grid">
-            <div class="moment-item1"></div>
-            <div class="moment-item2"></div>
-            <div class="moment-item3"></div>
-            <div class="moment-item4"></div>
-            <div class="moment-item5"></div>
-            <div class="moment-item6"></div>
-            <div class="moment-item7"></div>
-            <div class="moment-item8"></div>
-            <div class="moment-item9"></div>
-        </div>
-    </div>
 
     <style>
         .moments-grid {
